DST-1136 Typeahead market filters with vanilla js
Vue version of the tyeahead seems to have problems with cross browser compatibility because
we're relying on both browser behaviour and vue state. keeping both in sync has proved to be fiddly, thus a simpler approach was needed.

Implement a simple vanilla js filter that toggles a class to the dom elements that don't match the search query.

--- a/src/app/components/filter-market-exported-to/template.njk
+++ b/src/app/components/filter-market-exported-to/template.njk
@@ -2,26 +2,27 @@
 {% from "label/macro.njk" import govukLabel %}
 {% from "input/macro.njk" import govukInput %}
 
-<checkbox-typeahead
-        filter-name="{{'market-exported-to'}}"
-        filter-title="{{'Market exported to'}}"
-        id="{{'market-exported-to'}}"
-></checkbox-typeahead>
-<noscript>
-    <div class="govuk-form-group ">
-        <div class=" app-filter-group-heading">
-            {{ govukLabel({
-                text: "Market exported to",
-                classes: "govuk-!-font-weight-bold app-filter-label"
-            }) }}
-        </div>
-        <div class="app-filter-group-list">
-            {{ govukCheckboxes({
-                idPrefix: "market-exported-to",
-                name: "market-exported-to",
-                classes: "app-filter-checkboxes-group",
-                items: params.marketExportedTo
+<div class="govuk-form-group js-checkbox-typeahead">
+    <div class=" app-filter-group-heading">
+        {{ govukLabel({
+            text: "Market exported to",
+            classes: "govuk-!-font-weight-bold app-filter-label"
+        }) }}
+        <div class="app-checkbox-typeahead">
+            {{ govukInput({
+                label: {
+                    text: "Search for country"
+                },
+                classes: "js-checkbox-typeahead-input js-prevent-auto-submit"
             }) }}
         </div>
     </div>
-</noscript>
+    <div class="app-filter-group-list">
+        {{ govukCheckboxes({
+            idPrefix: "market-exported-to",
+            name: "market-exported-to",
+            classes: "app-filter-checkboxes-group",
+            items: params.marketExportedTo
+        }) }}
+    </div>
+</div>
