--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -16,7 +16,7 @@
     <h1 class="govuk-heading-l">Find Exporters</h1>
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
-            <form action="/" class="js-AutoSubmit js-vue-wrapper">
+            <form action="/" class="js-auto-submit">
                 {{ filterCompanyName(filters) }}
                 {{ filterExportPotential(filters) }}
                 {{ filterCommodityCode(filters) }}
