DST-1136 prevent quicktype input from submiting form when changed

--- a/src/app/components/filter-market-exported-to/template.njk
+++ b/src/app/components/filter-market-exported-to/template.njk
@@ -13,9 +13,7 @@
             label: {
                 text: "Search for country"
             },
-            classes: "js-checkbox-typeahead-input",
-            id: "search-for-country",
-            name: "search-for-country"
+            classes: "js-checkbox-typeahead-input js-prevent-auto-submit"
         }) }}
     </div>
     <div class="app-filter-group-list">
