--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -18,7 +18,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
             <form action="/" class="js-auto-submit app-form-filters">
-                <input name="sort" value="{{ sort.sort }}">
+                <input name="sort" type="hidden" value="{{ sort }}">
                 {{ filterCompanyName(filters) }}
                 {{ filterExportPotential(filters) }}
                 {{ filterCommodityCode(filters) }}
