DST-1193 Solve IE11 async filters issue

--- a/src/app/views/_generic.njk
+++ b/src/app/views/_generic.njk
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/public/app-ie8.css">
     <![endif]-->
     <!--[if lt IE 9]>
-    <script src="/vendor/html5-shiv/html5shiv.js"></script>
+    <script src="/public/dist/js/html5shiv.min.js"></script>
     <![endif]-->
 
     {% block styles %}{% endblock %}
