--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -1,4 +1,3 @@
-@import "govuk-frontend/all";
+@import "../../../node_modules/govuk-frontend/all";
 @import "utilities";
-
 @import "../../app/components/render-collection/render-collection";
