DST-1225 fixed typeahead race condition

--- a/src/app/components/filter-market-exported-to/template.njk
+++ b/src/app/components/filter-market-exported-to/template.njk
@@ -13,7 +13,7 @@
                 label: {
                     text: "Search for country"
                 },
-                classes: "js-checkbox-typeahead-input js-prevent-auto-submit"
+                classes: "js-market-exported-to js-checkbox-typeahead-input js-prevent-auto-submit"
             }) }}
         </div>
     </div>
