DST-1263 create markup and styling for global header in FEx

--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -1,5 +1,6 @@
 $govuk-font-family: Arial, sans-serif;
 
 @import "../../../node_modules/govuk-frontend/all";
+@import "global-header";
 @import "utilities";
 @import "../../app/components/render-collection/render-collection";
