--- a/src/app/views/template.njk
+++ b/src/app/views/template.njk
@@ -38,36 +38,66 @@
 {% endblock %}
 
 {% block header %}
-    <header class="govuk-header " role="banner" data-module="header">
-        <div class="govuk-header__container govuk-width-container">
+    <div class="global-header">
 
-            <div class="govuk-header__logo">
-                <a href="https://www.datahub.trade.gov.uk" class="govuk-header__link govuk-header__link--homepage">
-                    <span class="govuk-header__logotype">
-                      <span class="govuk-header__logotype-text">
-                        Data Hub
-                      </span>
-                    </span>
-                </a>
-            </div>
-            <div class="govuk-header__content">
-                <a href="/" class="govuk-header__link govuk-header__link--service-name">
-                    Find Exporters
-                </a>
-            </div>
 
-        </div>
-    </header>
+        <header class="govuk-header " role="banner" data-module="header">
+            <div class="govuk-header__container govuk-width-container">
+                <div class="govuk-header__logo">
+                    <a href="https://www.datahub.trade.gov.uk" class="govuk-header__link govuk-header__link--homepage">
+                        <span class="govuk-header__logotype">
+                          <span class="govuk-header__logotype-text">
+                            Data Hub
+                          </span>
+                        </span>
+                    </a>
+                    <span class="govuk-tag govuk-phase-banner__content__tag global-phase-tag">BETA</span>
+                </div>
+                <ul class="proposition-menu">
+                    <li class="proposition-menu__item"><a href="#" class="proposition-menu__link govuk-link active">Support</a></li>
+                    <li class="proposition-menu__item"><a href="#" class="proposition-menu__link govuk-link">Cecily Cardew</a></li>
+                    <li class="proposition-menu__item"><a href="#" class="proposition-menu__link govuk-link">Sign out</a></li>
+                </ul>
+
+            </div>
+            <div class="global-nav-pane">
+                <nav class="global-nav govuk-clearfix">
+                    <div class="govuk-width-container">
+                        <ul class="global-nav-list">
+                            <li class="global-nav-list-item">
+                                <a href="#" class="global-nav-link govuk-link">Companies</a>
+                            </li>
+                            <li class="global-nav-list-item">
+                                <a href="#" class="global-nav-link govuk-link">Contacts</a>
+                            </li>
+                            <li class="global-nav-list-item">
+                                <a href="#" class="global-nav-link govuk-link">Events</a>
+                            </li>
+                            <li class="global-nav-list-item">
+                                <a href="#" class="global-nav-link govuk-link">Interactions</a>
+                            </li>
+                            <li class="global-nav-list-item">
+                                <a href="#" class="global-nav-link govuk-link">Investments</a>
+                            </li>
+                            <li class="global-nav-list-item">
+                                <a href="#" class="global-nav-link govuk-link">Orders (OMIS)</a>
+                            </li>
+                            <li class="global-nav-list-item">
+                                <a href="#" class="global-nav-link govuk-link">MI dashboards</a>
+                            </li>
+                            <li class="global-nav-list-item">
+                                <a href="#" class="global-nav-link govuk-link active">Find Exporters</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+    </div>
 {% endblock %}
 
 {% block main %}
     <div class="govuk-width-container">
-        {{ govukPhaseBanner({
-            tag: {
-                text: "beta"
-            },
-            html: 'This is a new service - your <a class="govuk-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSc-H72Kx9azBV4NvVTn-EmQ867gAZsVQ0UWEIpmD7Njcpm4BQ/viewform">feedback</a> will help us to improve it.'
-        }) }}
         {% block beforeContent %}{% endblock %}
         <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main">
             {% block content %}{% endblock %}
