--- a/src/app/views/error/404.njk
+++ b/src/app/views/error/404.njk
@@ -1,6 +1,21 @@
 {% extends 'layout.njk' %}
 
-{% set pageName='Not found' %}
-{% block page_content %}
-404 page
+{% set pageName='Page not found' %}
+
+{% block content %}
+    <div class="govuk-width-container">
+        <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+                    <h1 class="govuk-heading-l"> Page not found </h1>
+                    <p class="govuk-body"> If you typed the web address, check it is correct.
+                    </p>
+                    <p class="govuk-body">If you pasted the web address, check you copied the entire address.
+                    </p>
+                    <p class="govuk-body">If the web address is correct or you selected a link or button, contact <a href="https://www.datahub.trade.gov.uk/support">support</a>.
+                    </p>
+                </div>
+            </div>
+        </main>
+    </div>
 {% endblock %}
