add govuk-link class to see-more anchor tag to pull in specific styling

--- a/src/app/components/company-profile-body/template.njk
+++ b/src/app/components/company-profile-body/template.njk
@@ -39,7 +39,7 @@
         {% endif %}
 
         <tr class="govuk-table__row js-see-more app-hidden">
-            <td class="govuk-table__cell govuk-!-font-size-16 js-border-none" scope="row"><a class="js-see-more-cta" href="#">See more</a></td>
+            <td class="govuk-table__cell govuk-!-font-size-16 js-border-none" scope="row"><a class="js-see-more-cta govuk-link" href="#">See more</a></td>
             <td class="govuk-table__cell govuk-!-font-size-16 js-border-none" scope="row"></td>
         </tr>
 
