--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -125,120 +125,131 @@
         {% endif %}
     </header>
     <ol class="govuk-list govuk-body app-collection-list">
-    {% if result.length %}
-        {% for item in result %}
-            <li class="app-collection-item" id="{{ item.company_id }}">
-            <div class="app-collection-heading">
-                <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-two-thirds">
-                    {% if item.datahub_company_id %}
-                        <h3 class="govuk-heading-m govuk-!-margin-top-4"><a href="https://www.datahub.trade.gov.uk/companies/{{ item.datahub_company_id }}">{{ item.company_name | title }}</a></h3>
-                    {% else %}
-                        <h3 class="govuk-heading-m govuk-!-margin-top-4"><a href="/company-profile/{{ item.company_id }}">{{ item.company_name | title }}</a></h3>
-                    {% endif %}
-                    </div>
-                    {% if item.region %}
-                        <div class="govuk-grid-column-one-third">
-                            <span class="govuk-!-font-size-16 govuk-!-display-inline govuk-!-font-weight-bold app-badge">{{ item.region }}</span>
-                            {% if item.headquarter_type %}
-                                <span class="govuk-!-font-size-16 govuk-!-display-inline govuk-!-font-weight-bold app-badge">{{ item.headquarter_type | formatToUpper }}</span>
+        {% if result.length %}
+            {% for item in result %}
+                <li class="app-collection-item" id="{{ item.company_id }}">
+                    <div class="app-collection-heading">
+                        <div class="govuk-grid-row">
+                            <div class="govuk-grid-column-two-thirds">
+                            {% if item.datahub_company_id %}
+                                <h3 class="govuk-heading-m govuk-!-margin-top-4"><a href="https://www.datahub.trade.gov.uk/companies/{{ item.datahub_company_id }}">{{ item.company_name | title }}</a></h3>
+                            {% else %}
+                                <h3 class="govuk-heading-m govuk-!-margin-top-4"><a href="/company-profile/{{ item.company_id }}">{{ item.company_name | title }}</a></h3>
                             {% endif %}
-                        </div>
-                    {% endif %}
-                    <div class="govuk-grid-column-full">
-                        {% if item.line_of_business  %}
-                            <div class="govuk-!-display-block govuk-!-padding-top-1 govuk-!-padding-bottom-4">
-                                <span class="app-metric-header govuk-!-display-inline">Line of business:</span>
-                                <span class="app-metric-value govuk-!-display-inline">{{ item.line_of_business }}</span>
                             </div>
-                        {% endif %}
+                            {% if item.region %}
+                                <div class="govuk-grid-column-one-third">
+                                    <span class="govuk-!-font-size-16 govuk-!-display-inline govuk-!-font-weight-bold app-badge">{{ item.region }}</span>
+                                    {% if item.headquarter_type %}
+                                        <span class="govuk-!-font-size-16 govuk-!-display-inline govuk-!-font-weight-bold app-badge">{{ item.headquarter_type | formatToUpper }}</span>
+                                    {% endif %}
+                                </div>
+                            {% endif %}
+                            <div class="govuk-grid-column-full">
 
-                        {% if item.export_propensity  %}
-                            <span class="app-metric-potential-title">Export potential:</span>
-                            <span class="app-metric-potential-data">{{ item.export_propensity }}</span>
-                        {% endif %}
+                                {% if item.line_of_business or item.dit_sectors  %}
+                                    <div class="govuk-!-display-block govuk-!-padding-top-1 govuk-!-padding-bottom-4">
+                                        {% if item.line_of_business  %}
+                                            <div class="govuk-!-display-block">
+                                                <span class="app-metric-header govuk-!-display-inline">Line of business:</span>
+                                                <span class="app-metric-value govuk-!-display-inline">{{ item.line_of_business }}</span>
+                                            </div>
+                                        {% endif %}
+                                        {% if item.line_of_business  %}
+                                            <div class="govuk-!-display-block">
+                                                <span class="app-metric-header govuk-!-display-inline">DIT Sector(s):</span>
+                                                <span class="app-metric-value govuk-!-display-inline">{{ item.dit_sectors }}</span>
+                                            </div>
+                                        {% endif %}
+                                    </div>
+                                {% endif %}
+
+                                {% if item.export_propensity  %}
+                                    <span class="app-metric-potential-title">Export potential:</span>
+                                    <span class="app-metric-potential-data">{{ item.export_propensity }}</span>
+                                {% endif %}
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="govuk-grid-row">
-                <ul class="govuk-grid-column-one-half govuk-list">
-                    {% if item.last_export_evidence %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">Last export evidence:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.last_export_evidence | formatDate }}</span>
-                        </li>
-                    {% endif %}
-                    {% if item.num_export_wins %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">DIT export wins:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.num_export_wins }}</span>
-                        </li>
-                    {% endif %}
-                    {% if item.num_export_opp_enquiries %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">Export opportunity enquiries:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.num_export_opp_enquiries }}</span>
-                        </li>
-                    {% endif %}
-                    {% if item.num_hmrc_export_goods_outside_eu %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">HMRC export of goods:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.num_hmrc_export_goods_outside_eu }}</span>
-                        </li>
-                    {% endif %}
-                    {% if item.num_hmrc_import_goods_outside_eu %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">HMRC import of goods:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.num_hmrc_import_goods_outside_eu }}</span>
-                        </li>
-                    {% endif %}
-                    {% if item.incorporation_month %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">Incorporation date:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.incorporation_month | formatDate }}</span>
-                        </li>
-                    {% endif %}
-                </ul>
-                <ul class="govuk-grid-column-one-half govuk-list">
-                    {% if item.cash_bank_in_hand %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">Cash in the bank:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.cash_bank_in_hand | formatWithPoundSign}}</span>
-                        </li>
-                    {% endif %}
-                    {% if item.current_assets %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">Current assets:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.current_assets | formatWithPoundSign}}</span>
-                        </li>
-                    {% endif %}
-                    {% if item.shareholder_funds %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">Shareholder funds:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.shareholder_funds | formatWithPoundSign}}</span>
-                        </li>
-                    {% endif %}
-                    {% if item.employee_range %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">Employee range:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.employee_range }}</span>
-                        </li>
-                    {% endif %}
-                    {% if item.turnover %}
-                        <li>
-                            <span class="app-metric-header govuk-!-display-inline">Turnover:</span>
-                            <span class="app-metric-value govuk-!-display-inline">{{ item.turnover | formatWithPoundSign }}</span>
-                        </li>
-                    {% endif %}
-                </ul>
-            </div>
-            <hr class="govuk-section-break govuk-section-break--visible">
-        </li>
-        {% endfor %}
-    {% else %}
-        <h2>Oh no, there are no results for your search</h2>
-        <p> Please check your filters and try again </p>
-    {% endif %}
+                    <div class="govuk-grid-row">
+                        <ul class="govuk-grid-column-one-half govuk-list">
+                            {% if item.last_export_evidence %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">Last export evidence:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.last_export_evidence | formatDate }}</span>
+                                </li>
+                            {% endif %}
+                            {% if item.num_export_wins %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">DIT export wins:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.num_export_wins }}</span>
+                                </li>
+                            {% endif %}
+                            {% if item.num_export_opp_enquiries %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">Export opportunity enquiries:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.num_export_opp_enquiries }}</span>
+                                </li>
+                            {% endif %}
+                            {% if item.num_hmrc_export_goods_outside_eu %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">HMRC export of goods:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.num_hmrc_export_goods_outside_eu }}</span>
+                                </li>
+                            {% endif %}
+                            {% if item.num_hmrc_import_goods_outside_eu %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">HMRC import of goods:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.num_hmrc_import_goods_outside_eu }}</span>
+                                </li>
+                            {% endif %}
+                            {% if item.incorporation_month %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">Incorporation date:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.incorporation_month | formatDate }}</span>
+                                </li>
+                            {% endif %}
+                        </ul>
+                        <ul class="govuk-grid-column-one-half govuk-list">
+                            {% if item.cash_bank_in_hand %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">Cash in the bank:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.cash_bank_in_hand | formatWithPoundSign}}</span>
+                                </li>
+                            {% endif %}
+                            {% if item.current_assets %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">Current assets:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.current_assets | formatWithPoundSign}}</span>
+                                </li>
+                            {% endif %}
+                            {% if item.shareholder_funds %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">Shareholder funds:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.shareholder_funds | formatWithPoundSign}}</span>
+                                </li>
+                            {% endif %}
+                            {% if item.employee_range %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">Employee range:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.employee_range }}</span>
+                                </li>
+                            {% endif %}
+                            {% if item.turnover %}
+                                <li>
+                                    <span class="app-metric-header govuk-!-display-inline">Turnover:</span>
+                                    <span class="app-metric-value govuk-!-display-inline">{{ item.turnover | formatWithPoundSign }}</span>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                    <hr class="govuk-section-break govuk-section-break--visible">
+                </li>
+            {% endfor %}
+        {% else %}
+            <h2>Oh no, there are no results for your search</h2>
+            <p> Please check your filters and try again </p>
+        {% endif %}
     </ol>
     <nav class="app-pagination" aria-label="pagination: total {{ pagination.totalPages }} pages">
         <div class="app-aligned-center">
