--- a/src/app/components/filter-sectors/template.njk
+++ b/src/app/components/filter-sectors/template.njk
@@ -11,7 +11,8 @@
         <div class="app-checkbox-typeahead">
             {{ govukInput({
                 label: {
-                    text: "Search sector"
+                    text: "Search sector",
+                    classes: "app-filter-label"
                 },
                 classes: "js-dit-sectors js-checkbox-typeahead-input js-prevent-auto-submit"
             }) }}
