--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -155,7 +155,7 @@
                                                 <span class="app-metric-value govuk-!-display-inline">{{ item.line_of_business }}</span>
                                             </div>
                                         {% endif %}
-                                        {% if item.line_of_business  %}
+                                        {% if item.dit_sectors  %}
                                             <div class="govuk-!-display-block">
                                                 <span class="app-metric-header govuk-!-display-inline">DIT Sector(s):</span>
                                                 <span class="app-metric-value govuk-!-display-inline">{{ item.dit_sectors }}</span>
