--- a/src/app/components/filter-market-of-interest/template.njk
+++ b/src/app/components/filter-market-of-interest/template.njk
@@ -11,7 +11,8 @@
         <div class="app-checkbox-typeahead">
             {{ govukInput({
                 label: {
-                    text: "Search for country"
+                    text: "Search for country",
+                    classes: "app-filter-label"
                 },
                 classes: "js-market-of-interest js-checkbox-typeahead-input js-prevent-auto-submit"
             }) }}
